# ply-measure-demo

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
launch/: start.launch
scripts/: actions.py  datastore.py  gui.py  main.py  node.py  rosnode.py
scripts/models/: capture.ply  edge.py  gen_points.py  measure.py  snapshot.py  visualize.py
scripts/utils/: config.py  pc2.py
