<?xml version="1.0"?>
<package format="2">
  <name>ply-measure-demo</name>
  <version>0.1.0</version>
  <description>Saisun3D Viewer</description>

  <maintainer email="kyo.mikhael@gmail.com">HiraiKyo</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <exec_depend>python3-pyqt6</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
